--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -9,8 +9,8 @@ body {
   background-color: #f5f5f5;
 }
 #app {
-  width: 100vw;
-  height: 100vh;
+  width: 100dvw;
+  height: 100dvh;
   margin: 0;
   padding: 0;
   font-weight: normal;
